--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <img src="https://photos.google.com/photo/AF1QipM4ybl2Zl2Gv4BkhyCPbn5_QeoZ_wxB3239aiIX"/>
+    <img src="Anders-Profile.jpg" width="200" />
     
     <a href = "about.html"><p>About Me</p></a>
 
